--- a/frontend/reserve-n-dine/src/components/pages/Reservations/reservation.css
+++ b/frontend/reserve-n-dine/src/components/pages/Reservations/reservation.css
@@ -1,4 +1,4 @@
-
+/* 
 :root{
     --small-break: 768px;
     --med-break: 992px;
@@ -64,7 +64,7 @@ body
 
 /*Booking Page*/
 
-.selected-table
+/* .selected-table
 {
     font-size: 1.25rem;
     padding-bottom: 2%
@@ -73,7 +73,7 @@ body
 
 /* Dropdowns*/
 
-input[type=date]::-webkit-inner-spin-button
+/* input[type=date]::-webkit-inner-spin-button
 {
     -webkit-appearance: none;
     display: none
@@ -124,11 +124,11 @@ input[type=date]::-webkit-calendar-picker-indicator
         font-size: 1.2rem
     }
         
-}
+} */
     
 
 /* // Tables Display */
-.table-display-message
+/* .table-display-message
 {
     padding: 2% 0;
     text-align: center;
@@ -211,13 +211,13 @@ input[type=date]::-webkit-calendar-picker-indicator
     padding-top: 15px;
     font-family: Roboto, sans-serif;
 }
-}
-    
+} */
+     */
 
 
 
 /* // Confirmation Screen */
-.reservation-details-container
+/* .reservation-details-container
    { 
        padding: 0 4%;
        padding-bottom: 5%
@@ -246,7 +246,7 @@ input[type=date]::-webkit-calendar-picker-indicator
    }
 }
 /* // Thank You Page */
-.thanks-header
+/* .thanks-header
 {
     padding: 5% 0;
     padding-top: 10%;
@@ -263,9 +263,9 @@ input[type=date]::-webkit-calendar-picker-indicator
    { 
        font-size: 4rem;
         /* color: var(--red); */
-        padding-bottom: 8%;
-   }
-@media (min-width: var(--small-break)){
+        /* padding-bottom: 8%; */
+   /* } */
+/* @media (min-width: var(--small-break)){
 
     .thanks-header
     {
@@ -283,6 +283,4 @@ input[type=date]::-webkit-calendar-picker-indicator
     font-size: 7rem;
     padding-bottom: 4%;
 }
-     
-}
-    
+}*/
