--- a/frontend/reserve-n-dine/src/components/Button.css
+++ b/frontend/reserve-n-dine/src/components/Button.css
@@ -111,3 +111,27 @@
   .green:hover {
     background-color: #242424;
   }
+
+  .esewa {
+    color: black;
+    background: none;
+    outline: none;
+    border: none;
+    padding: 5px;
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+.cash{  
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.5rem;
+  background-color:transparent;
+  color:#1c2237 ;
+  border: 1px solid black;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  text-align: center;
+  padding: 10px 10px;
+  width:5%;
+}
