--- a/frontend/reserve-n-dine/src/components/pages/payment/Esewa.css
+++ b/frontend/reserve-n-dine/src/components/pages/payment/Esewa.css
@@ -1,7 +1,20 @@
+* {
+    box-sizing: border-box;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+  }
+
+
+
 h3 .title {
   margin-left: 60px;
 }
- .esewa {
-  outline: none;
- 
+.submit{
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.exit{
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
