--- a/frontend/reserve-n-dine/src/components/pages/Reservation/booking.css
+++ b/frontend/reserve-n-dine/src/components/pages/Reservation/booking.css
@@ -1,29 +1,247 @@
-.partysize, .checkin, .findatable, .wrapped{
-    width: 65%;
-    padding: 3% 0;
-    background-color: #78bd;
-    color: white;
-    margin: 4% 1.5%;
-    font-family: "Roboto";
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 2px;
-    text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap");
+
+/*=============
+Global Styles
+=============*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
-.tablemessagedisplay{
-   display: flex;
-    width: 65%;
-    padding: 2% 0;
-    position:static;
-    left:30%;
-    background-color: transparent;
-    color: black;
-    margin: 2% 5%;
-    font-family: "Roboto";
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 2px;
-    text-align: center;
+/*=============
+Variables
+=============*/
+
+:root {
+  --blue: #1c2237;
+  --lightgray: #f7f8fa;
+  --white: white;
+  --pink: #f00946;
+  --lightblue: #276afb;
+}
+
+.partysize,
+.checkin,
+.findatable,
+.wrapped {
+  width: 65%;
+  padding: 3% 0;
+  background-color: #78bd;
+  color: white;
+  margin: 4% 1.5%;
+  font-family: "Roboto";
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.tablemessagedisplay {
+  display: flex;
+  width: 65%;
+  padding: 2% 0;
+  position: static;
+  left: 30%;
+  background-color: transparent;
+  color: black;
+  margin: 2% 5%;
+  font-family: "Roboto";
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 2px;
+  text-align: center;
+  align-items: center;
+}
+
+/*=============
+Layout
+=============*/
+
+.reservation-content {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.reservation-form-container {
+  width: calc(100% - 420px);
+  padding: 2rem;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.opening-hour-info-container {
+  width: 420px;
+  padding: 3rem;
+}
+
+/*=============
+Components in opening-hour-info-container
+=============*/
+.dashed-border-container {
+  border: 2px dashed rgb(167, 165, 165);
+  padding: 3rem;
+}
+.opening-hour-info-content {
+  background-color: var(--blue);
+
+  text-align: center;
+  color: rgb(167, 165, 165);
+  padding: 1.5rem;
+}
+.opening-hour-info-content h3 {
+  color: var(--white);
+  font-family: "MonteCarlo", cursive;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.opening-hour-info-content h5 {
+  color: var(--white);
+  font-size: 1.2rem;
+}
+.opening-hour-info-content hr {
+  background-color: white;
+  width: 25%;
+  border: 1px outset;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 2rem;
+}
+.opening-hour-info-content p {
+  margin-bottom: 2rem;
+}
+
+/*=============
+Components in reservation-form-container
+=============*/
+.reservation-form-container h2 {
+  color: var(--blue);
+  font-family: "MonteCarlo", cursive;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 2rem;
+}
+
+.reservation-form-container p {
+  width: 50%;
+  text-align: justify;
+}
+
+.reservation-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
+}
+
+.reservation-form-inputs {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+.check-in,
+.party-size {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input,
+.party-size select {
+  display: block;
+  width: 250px;
+  height: 50px;
+}
+
+.find-table-btn {
+  padding: 0.8em;
+  background-color: var(--blue);
+  color: white;
+  transition: all 0.3s ease-out;
+}
+
+.find-table-btn:hover {
+  box-shadow: inset 0 0 0 2px var(--blue), 0 15px 20px -5px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: var(--blue);
+  /* border: 2px solid var(--blue); */
+}
+
+.available-seat-plans {
+  display: flex;
+  justify-content: safe;
+  column-gap: 10px;
+  padding: 2rem 0;
+}
+
+.seat-btn {
+  padding: 0.8em;
+  background-color: var(--blue);
+  color: white;
+  transition: all 0.3s ease-out;
+  /* border-radius: 20px; */
+}
+
+.seat-btn:hover {
+  box-shadow: inset 0 0 0 2px var(--blue), 0 15px 20px -5px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: var(--blue);
+  /* border: 2px solid var(--blue); */
+}
+
+/*=============
+Small screen
+=============*/
+@media screen and (max-width: 960px) {
+  .reservation-content {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+  }
+  .opening-hour-info-container{
+      width: 100%;
+  }
+  .reservation-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .reservation-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .reservation-form-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .available-seat-plans {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .reservation-form-container p{
+      width: 100%;
+  }
+  .react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input,
+.party-size select{
+    width: 400px;
+}
+button{
+    width: 100%;
+}
 }
