--- a/frontend/reserve-n-dine/src/components/Button.css
+++ b/frontend/reserve-n-dine/src/components/Button.css
@@ -1,42 +1,42 @@
 :root {
     --primary: #fff;
-  }
-  
-  .btn {
+}
+
+.btn {
     padding: 8px 20px;
     border-radius: 4px;
     outline: none;
     border: none;
     cursor: pointer;
     white-space: nowrap;
-  }
-  
-  .btn--primary {
+}
+
+.btn--primary {
     background-color: var(--primary);
     color: #242424;
     border: 1px solid var(--primary);
-  }
-  
-  .btn--outline {
+}
+
+.btn--outline {
     background-color: transparent;
     color: #fff;
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
-  }
-  
-  .btn--medium {
+}
+
+.btn--medium {
     padding: 8px 20px;
     text-align: center;
     font-size: 18px;
-  }
-  
-  .btn--large {
+}
+
+.btn--large {
     padding: 12px 26px;
     font-size: 20px;
-  }
-  
-  .btn--mobile {
+}
+
+.btn--mobile {
     border-radius: 4px;
     width: 80%;
     text-decoration: none;
@@ -46,68 +46,82 @@
     padding: 14px 20px;
     border: 1px solid #fff;
     transition: all 0.3s ease-out;
-  }
-  
-  .btn--wide {
+}
+
+.btn--wide {
     padding: 12px 64px;
     font-size: 20px;
-  }
-  
-  .btn--large:hover,
-  .btn--medium:hover,
-  .btn--mobile:hover {
+}
+
+.btn--large:hover,
+.btn--medium:hover,
+.btn--mobile:hover {
     transition: all 0.3s ease-out;
     background: #fff;
     color: #242424;
-  }
-  
-  .btn--wide:hover {
+}
+
+.btn--wide:hover {
     color: #fff;
     background-color: #f00946;
     transition: all 0.2s ease-out;
-  }
-  
-  .btn-link {
+}
+
+.btn-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align:center;
+    text-align: center;
     text-decoration: none;
     padding: 8px 16px;
     height: 100%;
     width: 100%;
-  }
-  
-  .blue {
+}
+
+.blue {
     background-color: #276afb;
     color: #fff;
     border: none;
-  }
-  
-  .red {
+}
+
+.red {
     background-color: #f00946;
     color: #fff;
     border: none;
-  }
-  
-  .primary {
+}
+
+.primary {
     background-color: #242424;
     color: #fff;
     border: none;
-  }
-  
-  .primary:hover {
+}
+
+.primary:hover {
     background-color: #fff;
     color: #242424;
     border: none;
-  }
-  
-  .green {
+}
+
+.green {
     background: #25ce4a;
     color: #fff;
     border: none;
-  }
-  
-  .green:hover {
+}
+
+.green:hover {
     background-color: #242424;
-  }
+}
+
+
+.cash {
+    border-radius: 4px;
+    width: 10%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #1c2237;
+    padding: 50% ;
+    border: 1px solid black;
+    transition: all 0.3s ease-out;
+    margin-left: 50%;
+}
