--- a/frontend/reserve-n-dine/src/components/Button.css
+++ b/frontend/reserve-n-dine/src/components/Button.css
@@ -111,27 +111,20 @@
   .green:hover {
     background-color: #242424;
   }
-
-  .esewa {
-    color: black;
-    background: none;
-    outline: none;
-    border: none;
-    padding: 5px;
-    font-size: 20px;
-    margin-left: 5px;
-}
-
+/* from payment.js button */
 .cash{  
-  border-radius: 4px;
+  margin-left: 45%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 1.5rem;
+  flex-wrap: wrap-reverse;
+  border-radius: 10px;
+  width: fit-content;
   text-decoration: none;
   font-size: 1.5rem;
-  background-color:transparent;
-  color:#1c2237 ;
-  border: 1px solid black;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  text-align: center;
-  padding: 10px 10px;
-  width:5%;
+  background-color: #1c2237;
+  color: #f9fafb;
+  padding: 14px 20px;
+  border: 4px solid rgb(26, 25, 25)
 }
