--- a/frontend/reserve-n-dine/src/components/pages/payment/Esewa.css
+++ b/frontend/reserve-n-dine/src/components/pages/payment/Esewa.css
@@ -7,14 +7,38 @@
 
 
 
-h3 .title {
-  margin-left: 60px;
-}
-.submit{
-    margin-left: 20px;
+  .submit {
+    margin-left: 45%;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    flex-wrap: wrap-reverse;
+    border-radius: 10px;
+    width: fit-content;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: #1c2237;
+    color: #f9fafb;
+    padding: 14px 14px;
+    border: 4px solid rgb(26, 25, 25)
 }
-.exit{
-    margin-left: 20px;
-    margin-bottom: 20px;
+.esewacontain {
+    text-align: center;
+    padding: 14px 14px;
+}
+
+.esewa {
+    color: black;
+    background: none;
+    outline: none;
+    border: none;
+    padding: 3px;
+    font-size: 20px;
+    cursor: default;
+}
+/* for cash payment button in payment */
+.checkout{
+  margin-top: 10px;
+  text-align: center;
 }
