--- a/frontend/reserve-n-dine/src/components/pages/Reservation/booking.css
+++ b/frontend/reserve-n-dine/src/components/pages/Reservation/booking.css
@@ -66,7 +66,7 @@ Layout
 
 .reservation-form-container {
   width: calc(100% - 420px);
-  padding: 2rem;
+  padding: 3rem;
   padding-right: 0;
   display: flex;
   flex-direction: column;
@@ -118,13 +118,20 @@ Components in opening-hour-info-container
 /*=============
 Components in reservation-form-container
 =============*/
+.reservation-form-container hr {
+  /* background-color: var(--blue); */
+  width: 10%;
+  border: 2px solid var(--blue);
+  margin-right: auto;
+  margin-left: auto;
+}
 .reservation-form-container h2 {
   color: var(--blue);
   font-family: "MonteCarlo", cursive;
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center;
-  margin: 2rem;
+  /* margin: 2rem; */
 }
 
 .reservation-form-container p {
@@ -177,25 +184,38 @@ Components in reservation-form-container
   /* border: 2px solid var(--blue); */
 }
 
-.available-seat-plans {
-  display: flex;
+
+.available-seat-plans-container {
+ 
+  width: 100%;
+  background-color: var(--blue);
+  color: var(--white);
+  border: 1px solid var(--blue);
+  /* border-radius: 1rem; */
   justify-content: safe;
-  column-gap: 10px;
-  padding: 2rem 0;
+  padding: 2rem;
+}
+
+.available-seat-plans {
+  /* display: flex; */
+  /* column-gap: 1rem; */
+  color: var(--white);
+
 }
 
 .seat-btn {
   padding: 0.8em;
-  background-color: var(--blue);
-  color: white;
+  margin: 1rem 1rem 0;
+  background-color: var(--white);
+  color: var(--blue);
   transition: all 0.3s ease-out;
-  /* border-radius: 20px; */
+  border-radius: 5px;
 }
 
 .seat-btn:hover {
   box-shadow: inset 0 0 0 2px var(--blue), 0 15px 20px -5px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  color: var(--blue);
+  background-color: var(--blue);
+  color: var(--white);
   /* border: 2px solid var(--blue); */
 }
 
